# rust_apollo_server

./: Cargo.toml  Readme.md
common-utils/: Cargo.toml
planets-service/: Cargo.toml
satellites-service/: Cargo.toml
src/: main.rs
src/schema/: health.rs  mod.rs
src/server/: mod.rs  routes.rs
